--- a/Samuel-Limon-Portfolio/Pages/Index.cshtml
+++ b/Samuel-Limon-Portfolio/Pages/Index.cshtml
@@ -5,6 +5,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
+    <h1 class="display-4">Hi, my name is Samuel Limon and I build websites... among other things.</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
