--- a/Samuel-Limon-Portfolio/Pages/Index.cshtml
+++ b/Samuel-Limon-Portfolio/Pages/Index.cshtml
@@ -4,6 +4,6 @@
     ViewData["Title"] = "Home page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Hi, my name is Samuel Limon and I build websites... among other things.</h1>
+<div class="jumbotron">
+    <div class="centered">Hi, my name is Samuel Limon</div>
 </div>
